--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,23 @@ artifacts
 # OS
 .DS_Store
 Thumbs.db
+
+# Documentation (keep separate from code)
+docs/
+*.pdf
+*.tex
+*.md
+!README.md
+!contracts/README.md
+
+# Image files
+*.png
+*.jpg
+*.jpeg
+*.gif
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+~*
